<resources>
    <string name="app_name">PizzaOrder</string>
    <string name="pizza_slice_description">A generic pizza slice</string>
    <string name="word_size">Size</string>
    <string name="desc_small_pizza">Small +$3</string>
    <string name="desc_medium_pizza">Medium +$6</string>
    <string name="desc_large_pizza">Large +$9</string>
    <string name="desc_extra_large_pizza">Extra Large +$12</string>
    <string name="word_toppings">Toppings</string>
    <string name="desc_extra_cheese">Extra Cheese +$2</string>
    <string name="desc_pepperoni">Pepperoni +$1</string>
    <string name="desc_onions">Onions</string>
    <string name="desc_black_olives">Black Olives</string>
    <string name="word_delivery">Delivery</string>
    <string name="word_no">No</string>
    <string name="word_yes">Yes</string>
    <string name="tv_delivery_type_text">Delivery Type</string>
    <string name="word_pick_up">Pick Up</string>
    <string name="word_home">Home</string>
    <string name="word_address">Address</string>
    <string name="sw_home_delivery_text">Home Delivery +$2</string>
    <string name="bt_place_order_text">Place Order</string>
    <string name="bt_place_order_enabled_text">Place Order of $</string>
    <string name="word_garlic">Garlic</string>
    <string name="desc_chicken">Chicken +$2</string>
    <string name="desc_bacon">Bacon +$2</string>
    <string name="main_activity_toolbar_text">Customize your pizza order</string>
    <string name="display_order_summary_toolbar_text">Order Summary</string>
    <string name="word_pizza">Pizza</string>
    <string name="word_small">Small</string>
    <string name="word_medium">Medium</string>
    <string name="word_large">Large</string>
    <string name="word_extra_large">Extra Large</string>
    <string name="tv_total_price_title">Total Price</string>
    <string name="tv_make_another_order_text">Make Another Order</string>
    <string name="order_summary_tv_address_text">It will be delivered at</string>
    <string name="sentence_pick_up_at_store">Pick up at store</string>
</resources>
