<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/ll_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_gravity="center">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"/>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/sv_scrollable_area"
        android:fillViewport="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/rl_footer"
        android:layout_below="@id/rl_header">

        <LinearLayout
            android:id="@+id/ll_order_customization_area"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_pizza_slice"
                    android:src="@drawable/pizza_slice"
                    android:contentDescription="@string/pizza_slice_description"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/ll_pizza_size_options_area"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/tv_size"
                    android:text="@string/word_size"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"/>

                <RadioGroup
                    android:id="@+id/rg_pizza_size_options"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="5dp"
                        android:background="?android:attr/listDivider" />

                    <RadioButton
                        android:id="@+id/rb_small_pizza_option"
                        android:text="@string/desc_small_pizza"
                        android:textAlignment="textStart"
                        android:layout_gravity="start"
                        android:layoutDirection="rtl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="7dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="?android:attr/listDivider" />

                    <RadioButton
                        android:id="@+id/rb_medium_pizza_option"
                        android:text="@string/desc_medium_pizza"
                        android:textAlignment="textStart"
                        android:layout_gravity="start"
                        android:layoutDirection="rtl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="7dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="?android:attr/listDivider" />

                    <RadioButton
                        android:id="@+id/rb_large_pizza_option"
                        android:text="@string/desc_large_pizza"
                        android:textAlignment="textStart"
                        android:layout_gravity="start"
                        android:layoutDirection="rtl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="7dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="?android:attr/listDivider" />

                    <RadioButton
                        android:id="@+id/rb_extra_large_pizza_option"
                        android:text="@string/desc_extra_large_pizza"
                        android:textAlignment="textStart"
                        android:layout_gravity="start"
                        android:layoutDirection="rtl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="7dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="?android:attr/listDivider" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_pizza_toppings_options_area"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/tv_toppings"
                    android:text="@string/word_toppings"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="?android:attr/listDivider" />

                <CheckBox
                    android:id="@+id/cb_onions_option"
                    android:enabled="false"
                    android:text="@string/desc_onions"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
                    android:layoutDirection="rtl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider" />

                <CheckBox
                    android:id="@+id/cb_garlic_option"
                    android:enabled="false"
                    android:text="@string/word_garlic"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
                    android:layoutDirection="rtl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider" />

                <CheckBox
                    android:id="@+id/cb_black_olives_option"
                    android:enabled="false"
                    android:text="@string/desc_black_olives"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
                    android:layoutDirection="rtl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider" />

                <CheckBox
                    android:id="@+id/cb_pepperoni_option"
                    android:enabled="false"
                    android:text="@string/desc_pepperoni"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
                    android:layoutDirection="rtl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider" />

                <CheckBox
                    android:id="@+id/cb_chicken_option"
                    android:enabled="false"
                    android:text="@string/desc_chicken"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
                    android:layoutDirection="rtl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider" />

                <CheckBox
                    android:id="@+id/cb_bacon_option"
                    android:enabled="false"
                    android:text="@string/desc_bacon"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
                    android:layoutDirection="rtl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider" />

                <CheckBox
                    android:id="@+id/cb_extra_cheese"
                    android:enabled="false"
                    android:text="@string/desc_extra_cheese"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
                    android:layoutDirection="rtl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_pizza_delivery_options_area"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/tv_delivery"
                    android:text="@string/word_delivery"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="?android:attr/listDivider" />

                <Switch
                    android:id="@+id/sw_home_delivery"
                    android:enabled="false"
                    android:text="@string/sw_home_delivery_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="7dp">

                    <TextView
                        android:id="@+id/tv_address"
                        android:text="@string/word_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/et_address" />

                    <EditText
                        android:id="@+id/et_address"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPostalAddress"
                        android:importantForAutofill="no" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/rl_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_gravity="center">

        <Button
            android:id="@+id/bt_place_order"
            android:text="@string/bt_place_order_text"
            app:backgroundTint="@color/colorPrimary"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

    </RelativeLayout>

</RelativeLayout>
